# fighting_tail

./: Cargo.toml
assets/kenney/: Readme.md
assets/ui/templates/hud/: index.html  unit_list.html
assets/ui/templates/hud/unit_list/: list_elements_slot.html  unit_list.html  unit_list_element.html
docs/: design_doc.md
src/: camera.rs  game_actions.rs  main.rs  map.rs  movement.rs  units.rs
src/movement/: mod.rs  path_finding.rs
src/resources/: mod.rs
src/time/: mod.rs
src/unit_managment/: mod.rs  orders.rs  selection.rs
src/units/: mod.rs  supply.rs
src/user_interface/: hud.rs  mod.rs  theme.rs  unit_list.rs
