[package]
name = "fighting_tail"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version="0.16.1"}
bevy-inspector-egui = "0.33.1"
bevy_lunex = "0.4.2"
hexx = {version = "0.21.0", features = ["bevy", "algorithms"]}
leafwing-input-manager = "0.17.1"



[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
