[package]
name = "fighting_tail"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" }
bevy-inspector-egui = "0.35.0"
bevy_hui = { branch = "master", git = "https://github.com/Lommix/bevy_hui.git" }
hexx = { version = "0.23.0", features = ["bevy", "algorithms"] }
leafwing-input-manager = "0.19.0"


[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
